# fh-pydantic-form

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASE_NOTES.md  pyproject.toml  pytest.ini  test_fallback_robustness.py
.github/: build.yaml
.github/workflows/: build.yaml  publish.yaml
examples/: __init__.py  annotation_app.py  comparison_example.py  comparison_form_example.py  complex_example.py  copy_example.py  disabled_example.py  dynamic_forms_example.py  list_example.py  literal_enum_example.py  metrics_example.py  nested_list_bugs_example.py  simple_example.py  validation_example.py
js/: run-tests.js
js/src/: comparison-helpers.js
js/tests/: comparison-helpers.test.js
src/fh_pydantic_form/: __init__.py  color_utils.py  comparison_form.py  defaults.py  field_renderers.py  form_parser.py  form_renderer.py  registry.py  type_helpers.py  ui_style.py
tests/: __init__.py  conftest.py  test_e2e_robustness.py  test_exclude_fields_defaults.py  test_form_actions.py  test_form_parser.py  test_initial_values_robustness.py  test_list_actions.py  test_nested_robustness.py  test_no_initial_values_defaults.py  test_property_based_robustness.py  test_registry.py  test_rendering.py  test_skip_json_initial_values.py  test_skip_json_schema_fields.py  test_string_field_renderer_fallback.py  test_type_helpers.py  test_validation.py
tests/comparison/: __init__.py  test_comparison_buttons_e2e.py  test_comparison_copy_list.py  test_comparison_copy_pills.py  test_comparison_copy_recursive.py  test_comparison_render.py  test_comparison_routes.py  test_comparison_skip_json_fields.py  test_comparison_unit.py  test_javascript_unit.py
tests/e2e/: conftest.py  (+4 more)
(+26 files in other folders)
