[project]
name = "fh-pydantic-form"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "monsterui>=1.0.18",
    "pydantic>=2.11.3",
    "python-fasthtml>=0.12.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
